--- a/index.html
+++ b/index.html
@@ -6,96 +6,15 @@
   <title>Slide Guys Booking</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" />
   <style>
-    /* ✅ Keep your original light body color */
-    body { background-color: #f8f9fa; font-family: Arial, sans-serif; margin: 0; min-height: 100vh; }
-
-    /* ====== PARTY BACKGROUND LAYERS (no body color change) ====== */
-    body::before{
-      content:"";
-      position: fixed;
-      inset: 0;
-      pointer-events: none;
-      z-index: 0;
-
-      /* Streamers + soft 3D lighting */
-      background:
-        radial-gradient(900px 600px at 15% 10%, rgba(255, 80, 170, 0.20), transparent 60%),
-        radial-gradient(900px 600px at 85% 12%, rgba(0, 206, 255, 0.18), transparent 60%),
-        radial-gradient(900px 650px at 50% 90%, rgba(255, 214, 0, 0.14), transparent 65%),
-
-        repeating-linear-gradient(135deg,
-          rgba(0, 106, 255, 0.12) 0 10px,
-          transparent 10px 34px
-        ),
-        repeating-linear-gradient(45deg,
-          rgba(255, 193, 7, 0.12) 0 12px,
-          transparent 12px 36px
-        ),
-        repeating-linear-gradient(120deg,
-          rgba(255, 80, 170, 0.10) 0 10px,
-          transparent 10px 40px
-        );
-
-      opacity: 1;
-    }
-
-    body::after{
-      content:"";
-      position: fixed;
-      inset: 0;
-      pointer-events: none;
-      z-index: 1;
-
-      /* Balloons + confetti + gentle vignette */
-      background:
-        /* balloons (highlight + body + shadow) */
-        radial-gradient(circle at 9% 17%, rgba(255,255,255,0.55) 0 10px, transparent 11px),
-        radial-gradient(circle at 11% 21%, rgba(255, 80, 170, 0.75) 0 62px, transparent 63px),
-        radial-gradient(circle at 12% 24%, rgba(0,0,0,0.18) 0 62px, transparent 66px),
-
-        radial-gradient(circle at 90% 16%, rgba(255,255,255,0.50) 0 9px, transparent 10px),
-        radial-gradient(circle at 88% 20%, rgba(0, 206, 255, 0.68) 0 70px, transparent 71px),
-        radial-gradient(circle at 89% 23%, rgba(0,0,0,0.18) 0 70px, transparent 74px),
-
-        radial-gradient(circle at 92% 78%, rgba(255,255,255,0.42) 0 9px, transparent 10px),
-        radial-gradient(circle at 90% 82%, rgba(255, 214, 0, 0.62) 0 68px, transparent 69px),
-        radial-gradient(circle at 91% 85%, rgba(0,0,0,0.16) 0 68px, transparent 72px),
-
-        radial-gradient(circle at 8% 84%, rgba(255,255,255,0.42) 0 9px, transparent 10px),
-        radial-gradient(circle at 10% 88%, rgba(94, 234, 212, 0.56) 0 62px, transparent 63px),
-        radial-gradient(circle at 11% 91%, rgba(0,0,0,0.16) 0 62px, transparent 66px),
-
-        /* confetti (denser + more color) */
-        radial-gradient(circle at 18% 32%, rgba(255, 214, 0, .55) 0 2px, transparent 3px),
-        radial-gradient(circle at 22% 46%, rgba(0, 206, 255, .55) 0 2px, transparent 3px),
-        radial-gradient(circle at 34% 28%, rgba(255, 80, 170, .55) 0 2px, transparent 3px),
-        radial-gradient(circle at 40% 52%, rgba(94, 234, 212, .55) 0 2px, transparent 3px),
-        radial-gradient(circle at 58% 36%, rgba(168, 85, 247, .55) 0 2px, transparent 3px),
-        radial-gradient(circle at 64% 56%, rgba(34, 197, 94, .55) 0 2px, transparent 3px),
-        radial-gradient(circle at 74% 40%, rgba(255, 214, 0, .55) 0 2px, transparent 3px),
-        radial-gradient(circle at 78% 60%, rgba(255, 80, 170, .55) 0 2px, transparent 3px),
-        radial-gradient(circle at 50% 18%, rgba(0, 206, 255, .55) 0 2px, transparent 3px),
-        radial-gradient(circle at 52% 72%, rgba(168, 85, 247, .55) 0 2px, transparent 3px),
-        radial-gradient(circle at 30% 78%, rgba(34, 197, 94, .55) 0 2px, transparent 3px),
-        radial-gradient(circle at 66% 86%, rgba(255, 214, 0, .55) 0 2px, transparent 3px),
-
-        /* subtle vignette to keep focus on center */
-        radial-gradient(1100px 700px at 50% 50%, transparent 58%, rgba(0,0,0,0.10) 100%);
-
-      opacity: 1;
-    }
+    body { background-color: #f8f9fa; font-family: Arial, sans-serif; }
 
     .booking-form {
-      position: relative;
-      z-index: 2; /* above the party layers */
       max-width: 500px;
       margin: 50px auto;
-      background: rgba(255,255,255,0.96);
+      background: white;
       padding: 30px;
       border-radius: 10px;
       box-shadow: 0 4px 20px rgba(0,0,0,0.1);
-      backdrop-filter: blur(5px);
-      -webkit-backdrop-filter: blur(5px);
     }
 
     .form-control { background-color: #e9f0ff; }
@@ -171,11 +90,22 @@
       border: 1px solid rgba(0,0,0,0.06);
     }
 
-    .unit-card-btn.booked { opacity: 0.55; border-color: #e1e1e1; }
-    .unit-card-btn.booked:hover { transform: none; box-shadow: none; border-color: #e1e1e1; cursor: not-allowed; }
+    .unit-card-btn.booked {
+      opacity: 0.55;
+      border-color: #e1e1e1;
+    }
+
+    .unit-card-btn.booked:hover {
+      transform: none;
+      box-shadow: none;
+      border-color: #e1e1e1;
+      cursor: not-allowed;
+    }
+
     .unit-card-btn.booked img { filter: grayscale(35%); }
     .unit-card-btn.booked .unit-badge { background: #ffe9ea; }
 
+    /* "In Cart" styling */
     .unit-card-btn.incart {
       border-color: #ffd27a;
       box-shadow: 0 0 0 3px rgba(255, 210, 122, 0.28);
@@ -191,7 +121,10 @@
       font-size: 0.95rem;
     }
 
-    .cart-totals { margin-top: 10px; }
+    /* Total rows */
+    .cart-totals {
+      margin-top: 10px;
+    }
     .cart-total-row {
       display: flex;
       justify-content: space-between;
@@ -248,6 +181,7 @@
       <h5 class="mb-2">Cart</h5>
       <ul class="list-group" id="cartList"></ul>
 
+      <!-- ✅ Totals -->
       <div class="cart-totals">
         <div class="cart-total-row">
           <div class="label">Total</div>
@@ -289,13 +223,18 @@
       let bookedUnitIds = new Set();
       let checking = false;
 
+      // cart: { unitId, unitName, price, date }
       const cart = [];
 
-      function cartKey(unitId, dateStr) { return `${String(unitId)}|${dateStr}`; }
+      function cartKey(unitId, dateStr) {
+        return `${String(unitId)}|${dateStr}`;
+      }
 
       function cartKeysForDate(dateStr) {
         const set = new Set();
-        cart.forEach(item => { if (item.date === dateStr) set.add(cartKey(item.unitId, item.date)); });
+        cart.forEach(item => {
+          if (item.date === dateStr) set.add(cartKey(item.unitId, item.date));
+        });
         return set;
       }
 
@@ -310,12 +249,19 @@
         return v.toFixed(2).replace(/\.00$/, '');
       }
 
-      function getCartTotal() { return cart.reduce((sum, item) => sum + priceNumber(item.price), 0); }
-      function getDepositTotal() { return cart.length * DEPOSIT_PER_UNIT; }
+      function getCartTotal() {
+        return cart.reduce((sum, item) => sum + priceNumber(item.price), 0);
+      }
+
+      function getDepositTotal() {
+        return cart.length * DEPOSIT_PER_UNIT;
+      }
 
       function updateCartTotalsUI() {
-        document.getElementById('cartTotal').textContent = formatMoney(getCartTotal());
-        document.getElementById('cartDeposit').textContent = formatMoney(getDepositTotal());
+        const totalEl = document.getElementById('cartTotal');
+        const depEl = document.getElementById('cartDeposit');
+        if (totalEl) totalEl.textContent = formatMoney(getCartTotal());
+        if (depEl) depEl.textContent = formatMoney(getDepositTotal());
       }
 
       function clearSelectionUI() {
@@ -328,6 +274,7 @@
         const unitGrid = document.getElementById('unitGrid');
         const selectedDate = document.getElementById('date').value;
         const hasDate = !!selectedDate;
+
         const inCartForThisDate = hasDate ? cartKeysForDate(selectedDate) : new Set();
 
         unitGrid.innerHTML = '';
@@ -353,14 +300,28 @@
             <div class="unit-name">${unit.name}</div>
           `;
 
-          if (hasDate && !checking && isBooked) { btn.classList.add('booked'); btn.setAttribute('aria-disabled', 'true'); }
-          if (hasDate && !checking && !isBooked && isInCart) { btn.classList.add('incart'); }
+          if (hasDate && !checking && isBooked) {
+            btn.classList.add('booked');
+            btn.setAttribute('aria-disabled', 'true');
+          }
+          if (hasDate && !checking && !isBooked && isInCart) {
+            btn.classList.add('incart');
+          }
 
           btn.addEventListener('click', () => {
             const chosenDate = document.getElementById('date').value;
-            if (!chosenDate) return alert('Please select a date first.');
-            if (checking) return alert('Checking availability… try again in a second.');
-            if (bookedUnitIds.has(unitId)) return alert('Sorry — this unit is already booked on this date.');
+            if (!chosenDate) {
+              alert('Please select a date first.');
+              return;
+            }
+            if (checking) {
+              alert('Checking availability… try again in a second.');
+              return;
+            }
+            if (bookedUnitIds.has(unitId)) {
+              alert('Sorry — this unit is already booked on this date.');
+              return;
+            }
 
             unitGrid.querySelectorAll('.unit-card-btn').forEach(b => b.classList.remove('selected'));
             btn.classList.add('selected');
@@ -373,8 +334,12 @@
       }
 
       async function loadUnits() {
-        const { data, error } = await supabase.from('units').select('id, name, thumbnail_url, price');
+        const { data, error } = await supabase
+          .from('units')
+          .select('id, name, thumbnail_url, price');
+
         if (error) return;
+
         unitsCache = data || [];
         renderUnits();
       }
@@ -391,7 +356,11 @@
           .select('unit')
           .eq('date', dateStr);
 
-        bookedUnitIds = (!error && bookings) ? new Set(bookings.map(b => String(b.unit))) : new Set();
+        if (!error && bookings) {
+          bookedUnitIds = new Set(bookings.map(b => String(b.unit)));
+        } else {
+          bookedUnitIds = new Set();
+        }
 
         checking = false;
         renderUnits();
@@ -399,7 +368,9 @@
         const selectedUnitName = document.getElementById('unit').value;
         if (selectedUnitName) {
           const selectedUnit = unitsCache.find(u => u.name === selectedUnitName);
-          if (selectedUnit && bookedUnitIds.has(String(selectedUnit.id))) clearSelectionUI();
+          if (selectedUnit && bookedUnitIds.has(String(selectedUnit.id))) {
+            clearSelectionUI();
+          }
         }
       }
 
@@ -419,22 +390,38 @@
 
       await loadUnits();
 
+      // Add to Cart
       document.getElementById('addToCartBtn').addEventListener('click', async () => {
         const unitName = document.getElementById('unit').value;
         const date = document.getElementById('date').value;
 
-        if (!unitName || !date) return alert('Please select a unit and a date before adding to cart.');
+        if (!unitName || !date) {
+          alert('Please select a unit and a date before adding to cart.');
+          return;
+        }
 
         await refreshAvailability(date);
 
         const unitRow = unitsCache.find(u => u.name === unitName);
-        if (!unitRow) return alert('Could not find that unit. Please try again.');
+        if (!unitRow) {
+          alert('Could not find that unit. Please try again.');
+          return;
+        }
 
         const unitId = String(unitRow.id);
-        if (bookedUnitIds.has(unitId)) { alert('That unit is already booked on this date.'); clearSelectionUI(); return; }
+
+        if (bookedUnitIds.has(unitId)) {
+          alert('That unit is already booked on this date.');
+          clearSelectionUI();
+          return;
+        }
 
         const key = cartKey(unitId, date);
-        if (cart.some(item => cartKey(item.unitId, item.date) === key)) return alert('That unit is already in your cart for this date.');
+        const alreadyInCart = cart.some(item => cartKey(item.unitId, item.date) === key);
+        if (alreadyInCart) {
+          alert('That unit is already in your cart for this date.');
+          return;
+        }
 
         cart.push({ unitId, unitName, price: unitRow.price, date });
 
@@ -460,6 +447,7 @@
         updateCartTotalsUI();
       });
 
+      // Submit (ONE email only if ALL succeed) + total + deposit
       document.getElementById('bookingForm').addEventListener('submit', async (e) => {
         e.preventDefault();
 
@@ -469,7 +457,10 @@
         const address = document.getElementById('address').value.trim();
         const city = document.getElementById('city').value.trim();
 
-        if (cart.length === 0) return alert('Your cart is empty. Please add at least one booking.');
+        if (cart.length === 0) {
+          alert('Your cart is empty. Please add at least one booking.');
+          return;
+        }
 
         let allSuccessful = true;
         const reservedLines = [];
@@ -483,7 +474,10 @@
             .eq('name', unitName)
             .single();
 
-          if (unitError || !unitData) { allSuccessful = false; continue; }
+          if (unitError || !unitData) {
+            allSuccessful = false;
+            continue;
+          }
 
           const unitId = unitData.id;
 
@@ -493,22 +487,41 @@
             .eq('unit', unitId)
             .eq('date', date);
 
-          if (existing && existing.length > 0) { allSuccessful = false; continue; }
+          if (existing && existing.length > 0) {
+            allSuccessful = false;
+            continue;
+          }
 
           const { error: insertError } = await supabase.from('bookings').insert([
             { name, phone, email, address, city, unit: unitId, date }
           ]);
 
-          if (insertError) allSuccessful = false;
-          else reservedLines.push(`${unitName} — $${formatMoney(price)}`);
+          if (insertError) {
+            allSuccessful = false;
+          } else {
+            reservedLines.push(`${unitName} — $${formatMoney(price)}`);
+          }
         }
 
+        // ✅ Email only on full success + include total + deposit
         if (allSuccessful) {
           const items_summary = reservedLines.join('\n');
           const total_price = `$${formatMoney(getCartTotal())}`;
           const deposit_total = `$${formatMoney(getDepositTotal())}`;
 
-          const params = { name, phone, email, address, city, items_summary, total_price, deposit_total, unit: cart[0]?.unitName || '', date: cart[0]?.date || '' };
+          const params = {
+            name,
+            phone,
+            email,
+            address,
+            city,
+            items_summary,
+            total_price,
+            deposit_total,
+            // backward compatibility
+            unit: cart[0]?.unitName || '',
+            date: cart[0]?.date || ''
+          };
 
           await emailjs.send("service_1zxrd0j", "template_nqep0gt", params);
           await emailjs.send("service_1zxrd0j", "template_6z2dcsj", params);
@@ -518,6 +531,7 @@
           document.getElementById('bookingForm').reset();
 
           clearSelectionUI();
+
           cart.length = 0;
           document.getElementById('cartList').innerHTML = '';
           document.getElementById('cartSection').style.display = 'none';
@@ -529,6 +543,7 @@
         } else {
           document.getElementById('successMessage').style.display = 'none';
           document.getElementById('errorMessage').style.display = 'block';
+
           const d = document.getElementById('date').value;
           if (d) await refreshAvailability(d);
         }
